# bump2version-rs

./: Cargo.toml  README.md  bumpversion.toml
src/: main.rs
