[package]
name = "bump2version-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
